Fixed spacing in header to work with curved text, changed wrapper from -40px margin top to 0, deleted scss for curved text

--- a/themes/noelle-portfolio-theme/docroot/_diffs/css/custom.css
+++ b/themes/noelle-portfolio-theme/docroot/_diffs/css/custom.css
@@ -16,7 +16,7 @@ $dockbarWidth:67px;
 .aui {
 
 	#wrapper {
-		margin: -40px auto 0;
+		margin: 0 auto;
 		padding: 0;
 		max-width: 1154px;
 	}
@@ -88,6 +88,8 @@ $dockbarWidth:67px;
 
 	.page-title {
 		color: #FFF;
+		margin-top: 0;
+		margin-bottom: 90px;
 		padding-top: 20px;
 		text-align: center;
 
@@ -99,7 +101,7 @@ $dockbarWidth:67px;
 	.site-title {
 		color: #FFF;
 		display: inline-block;
-		margin: 100px 0;
+		margin-top: 50px;
 		padding: 5px 10px;
 	}
 
@@ -555,25 +557,4 @@ $dockbarWidth:67px;
     100% {
         transform: translateY(0);
     }
-}
-
-.page-title .curved-text {
-	@include transform(rotate(300deg));
-
-	position: relative;
-
-	span {
-		height: 700px;
-		padding: 0 50%;
-		position: absolute;
-		top: 0;
-		width: 10px;
-
-	}
-
-	@for $i from 1 through 100 {
-		.char#{$i} {
-			@include transform(rotate($i * 12 + deg));
-		}
-	}
 }
